--- a/res/res.qrc
+++ b/res/res.qrc
@@ -5,5 +5,6 @@
         <file>action_icons/tooth_card.png</file>
         <file>action_icons/edit_patient.png</file>
         <file>action_icons/add_event.png</file>
+        <file>action_icons/default_user.png</file>
     </qresource>
 </RCC>
