--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1007</width>
+    <width>1000</width>
     <height>580</height>
    </rect>
   </property>
@@ -19,10 +19,11 @@
   <property name="font">
    <font>
     <family>Comic Sans MS</family>
+    <pointsize>9</pointsize>
    </font>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Nester Dental Clinic</string>
   </property>
   <property name="toolTip">
    <string/>
@@ -58,6 +59,7 @@
             <property name="font">
              <font>
               <family>Comic Sans MS</family>
+              <pointsize>9</pointsize>
              </font>
             </property>
            </widget>
@@ -79,6 +81,7 @@
             <property name="font">
              <font>
               <family>Comic Sans MS</family>
+              <pointsize>9</pointsize>
              </font>
             </property>
             <property name="placeholderText">
@@ -111,6 +114,7 @@
           <property name="font">
            <font>
             <family>Comic Sans MS</family>
+            <pointsize>9</pointsize>
            </font>
           </property>
          </widget>
@@ -122,10 +126,22 @@
         <item>
          <widget class="QLabel" name="label_9">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>30</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>30</height>
+           </size>
           </property>
           <property name="font">
            <font>
@@ -134,7 +150,7 @@
            </font>
           </property>
           <property name="text">
-           <string>Дані пацієнта</string>
+           <string>Дані</string>
           </property>
          </widget>
         </item>
@@ -150,6 +166,7 @@
               <property name="font">
                <font>
                 <family>Comic Sans MS</family>
+                <pointsize>9</pointsize>
                </font>
               </property>
               <property name="text">
@@ -164,6 +181,11 @@
                 <family>Comic Sans MS</family>
                </font>
               </property>
+              <property name="styleSheet">
+               <string notr="true">QLineEdit {
+background-color: rgba(250,250,250,0.2)
+}</string>
+              </property>
               <property name="readOnly">
                <bool>true</bool>
               </property>
@@ -174,6 +196,7 @@
               <property name="font">
                <font>
                 <family>Comic Sans MS</family>
+                <pointsize>9</pointsize>
                </font>
               </property>
               <property name="text">
@@ -188,6 +211,11 @@
                 <family>Comic Sans MS</family>
                </font>
               </property>
+              <property name="styleSheet">
+               <string notr="true">QLineEdit {
+background-color: rgba(250,250,250,0.2)
+}</string>
+              </property>
               <property name="readOnly">
                <bool>true</bool>
               </property>
@@ -198,6 +226,7 @@
               <property name="font">
                <font>
                 <family>Comic Sans MS</family>
+                <pointsize>9</pointsize>
                </font>
               </property>
               <property name="text">
@@ -212,6 +241,11 @@
                 <family>Comic Sans MS</family>
                </font>
               </property>
+              <property name="styleSheet">
+               <string notr="true">QLineEdit {
+background-color: rgba(250,250,250,0.2)
+}</string>
+              </property>
               <property name="readOnly">
                <bool>true</bool>
               </property>
@@ -222,6 +256,7 @@
               <property name="font">
                <font>
                 <family>Comic Sans MS</family>
+                <pointsize>9</pointsize>
                </font>
               </property>
               <property name="text">
@@ -236,6 +271,11 @@
                 <family>Comic Sans MS</family>
                </font>
               </property>
+              <property name="styleSheet">
+               <string notr="true">QLineEdit {
+background-color: rgba(250,250,250,0.2)
+}</string>
+              </property>
               <property name="readOnly">
                <bool>true</bool>
               </property>
@@ -246,6 +286,7 @@
               <property name="font">
                <font>
                 <family>Comic Sans MS</family>
+                <pointsize>9</pointsize>
                </font>
               </property>
               <property name="text">
@@ -260,6 +301,11 @@
                 <family>Comic Sans MS</family>
                </font>
               </property>
+              <property name="styleSheet">
+               <string notr="true">QLineEdit {
+background-color: rgba(250,250,250,0.2)
+}</string>
+              </property>
               <property name="readOnly">
                <bool>true</bool>
               </property>
@@ -270,6 +316,7 @@
               <property name="font">
                <font>
                 <family>Comic Sans MS</family>
+                <pointsize>9</pointsize>
                </font>
               </property>
               <property name="text">
@@ -284,6 +331,11 @@
                 <family>Comic Sans MS</family>
                </font>
               </property>
+              <property name="styleSheet">
+               <string notr="true">QLineEdit {
+background-color: rgba(250,250,250,0.2)
+}</string>
+              </property>
               <property name="readOnly">
                <bool>true</bool>
               </property>
@@ -294,6 +346,7 @@
               <property name="font">
                <font>
                 <family>Comic Sans MS</family>
+                <pointsize>9</pointsize>
                </font>
               </property>
               <property name="text">
@@ -308,6 +361,11 @@
                 <family>Comic Sans MS</family>
                </font>
               </property>
+              <property name="styleSheet">
+               <string notr="true">QLineEdit {
+background-color: rgba(250,250,250,0.2)
+}</string>
+              </property>
               <property name="readOnly">
                <bool>true</bool>
               </property>
@@ -318,6 +376,7 @@
               <property name="font">
                <font>
                 <family>Comic Sans MS</family>
+                <pointsize>9</pointsize>
                </font>
               </property>
               <property name="text">
@@ -338,10 +397,28 @@
                 <family>Comic Sans MS</family>
                </font>
               </property>
+              <property name="styleSheet">
+               <string notr="true">QLineEdit {
+background-color: rgba(250,250,250,0.2)
+}</string>
+              </property>
               <property name="readOnly">
                <bool>true</bool>
               </property>
              </widget>
+            </item>
+            <item row="8" column="1">
+             <spacer name="verticalSpacer">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
             </item>
            </layout>
           </item>
@@ -350,10 +427,22 @@
             <item>
              <widget class="QLabel" name="patient_photo_lbl">
               <property name="sizePolicy">
-               <sizepolicy hsizetype="MinimumExpanding" vsizetype="Expanding">
+               <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                 <horstretch>0</horstretch>
                 <verstretch>0</verstretch>
                </sizepolicy>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>165</width>
+                <height>210</height>
+               </size>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>165</width>
+                <height>210</height>
+               </size>
               </property>
               <property name="font">
                <font>
@@ -365,6 +454,15 @@
               </property>
               <property name="text">
                <string/>
+              </property>
+              <property name="pixmap">
+               <pixmap resource="res/res.qrc">:/action_icons/default_user.png</pixmap>
+              </property>
+              <property name="scaledContents">
+               <bool>false</bool>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
               </property>
              </widget>
             </item>
@@ -504,6 +602,19 @@
               </item>
              </layout>
             </item>
+            <item>
+             <spacer name="verticalSpacer_2">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
            </layout>
           </item>
          </layout>
@@ -537,6 +648,7 @@
         <property name="font">
          <font>
           <family>Comic Sans MS</family>
+          <pointsize>9</pointsize>
          </font>
         </property>
         <property name="gridVisible">
@@ -569,6 +681,11 @@
           <width>16777215</width>
           <height>192</height>
          </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>9</pointsize>
+         </font>
         </property>
        </widget>
       </item>
