--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -31,6 +31,11 @@
   <property name="accessibleName">
    <string/>
   </property>
+  <property name="styleSheet">
+   <string notr="true"> QMainWindow {
+     background-color: rgb(185,254,255);
+ }</string>
+  </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
@@ -116,6 +121,9 @@
             <family>Comic Sans MS</family>
             <pointsize>9</pointsize>
            </font>
+          </property>
+          <property name="styleSheet">
+           <string notr="true"> QTableView { background-color: rgb(200, 251, 255) }</string>
           </property>
          </widget>
         </item>
@@ -686,6 +694,9 @@ background-color: rgba(250,250,250,0.2)
          <font>
           <pointsize>9</pointsize>
          </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true"> QTableWidget {   background-color: rgb(200, 251, 255) ; }</string>
         </property>
        </widget>
       </item>
