--- a/addpatientdialog.ui
+++ b/addpatientdialog.ui
@@ -31,6 +31,9 @@
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
      <widget class="QPushButton" name="add_pb">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
       <property name="text">
        <string>Додати</string>
       </property>
@@ -45,7 +48,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>22</x>
@@ -188,6 +191,12 @@
           <width>0</width>
           <height>23</height>
          </size>
+        </property>
+        <property name="maxLength">
+         <number>12</number>
+        </property>
+        <property name="clearButtonEnabled">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
