--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -52,14 +52,14 @@
           <item>
            <widget class="QComboBox" name="search_cb">
             <property name="sizePolicy">
-             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
             <property name="minimumSize">
              <size>
-              <width>0</width>
+              <width>150</width>
               <height>0</height>
              </size>
             </property>
@@ -388,7 +388,7 @@ background-color: rgba(250,250,250,0.2);
               </property>
              </widget>
             </item>
-            <item row="7" column="0">
+            <item row="8" column="0">
              <widget class="QLabel" name="label_10">
               <property name="font">
                <font>
@@ -401,7 +401,7 @@ background-color: rgba(250,250,250,0.2);
               </property>
              </widget>
             </item>
-            <item row="7" column="1">
+            <item row="8" column="1">
              <widget class="QLineEdit" name="last_visit_date_le">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -425,7 +425,14 @@ background-color: rgba(250,250,250,0.2);
               </property>
              </widget>
             </item>
-            <item row="8" column="1">
+            <item row="10" column="0">
+             <widget class="QLabel" name="label_7">
+              <property name="text">
+               <string>Алергічні та хронічні захворювання</string>
+              </property>
+             </widget>
+            </item>
+            <item row="12" column="1">
              <spacer name="verticalSpacer">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -437,6 +444,18 @@ background-color: rgba(250,250,250,0.2);
                </size>
               </property>
              </spacer>
+            </item>
+            <item row="10" column="1">
+             <widget class="QLineEdit" name="illnesses_le">
+              <property name="styleSheet">
+               <string notr="true">QLineEdit {
+background-color: rgba(250,250,250,0.2);
+}</string>
+              </property>
+              <property name="readOnly">
+               <bool>true</bool>
+              </property>
+             </widget>
             </item>
            </layout>
           </item>
@@ -735,7 +754,7 @@ background-color: rgba(250,250,250,0.2);
        </widget>
       </item>
       <item>
-       <widget class="QTableWidget" name="events_table">
+       <widget class="QTableView" name="events_table">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
           <horstretch>0</horstretch>
@@ -753,11 +772,6 @@ background-color: rgba(250,250,250,0.2);
           <width>16777215</width>
           <height>192</height>
          </size>
-        </property>
-        <property name="font">
-         <font>
-          <pointsize>9</pointsize>
-         </font>
         </property>
        </widget>
       </item>
